playground/notas_tests/invalid/cmt-02.hulk
print(1);
// COMENTARIO DE LINEA
// OTRO COMENTARIO
print(2 + "x");
